recursion.cons.min.Min.scala.error
Compilation error:
Min:6: error: type mismatch;
 found   : Unit
 required: Int
    if (l.tail.head<=l.head) {
    ^